fix jumpy list view

--- a/packages/frontend/src/tasks/_table.scss
+++ b/packages/frontend/src/tasks/_table.scss
@@ -198,7 +198,8 @@
         }
 
         &__edit {
-          width: 16px;
+          margin-top: 4.5px;
+          width: 6px;
         }
 
         &__id {
